--- a/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
+++ b/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-07-01" />
+<meta name="date" content="2025-09-14" />
 
 <title>Supplemental Table 2: Strain and ESBL gene presence stratified by household</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 2: Strain and ESBL gene
 presence stratified by household</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-07-01</h4>
+<h4 class="date">2025-09-14</h4>
 
 </div>
 
@@ -596,26 +596,26 @@ source(&quot;./lib/consistent_themes.R&quot;)
 # Print environment
 set.seed(45) 
 Sys.info()</code></pre>
-<pre><code>                                                                                            sysname 
-                                                                                           &quot;Darwin&quot; 
-                                                                                            release 
-                                                                                           &quot;24.5.0&quot; 
-                                                                                            version 
-&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
-                                                                                           nodename 
-                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
-                                                                                            machine 
-                                                                                           &quot;x86_64&quot; 
-                                                                                              login 
-                                                                                             &quot;root&quot; 
-                                                                                               user 
-                                                                                         &quot;kgontjes&quot; 
-                                                                                     effective_user 
-                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre><code>                                                                                             sysname 
+                                                                                            &quot;Darwin&quot; 
+                                                                                             release 
+                                                                                            &quot;24.6.0&quot; 
+                                                                                             version 
+&quot;Darwin Kernel Version 24.6.0: Mon Jul 14 11:28:17 PDT 2025; root:xnu-11417.140.69~1/RELEASE_X86_64&quot; 
+                                                                                            nodename 
+                                                                                    &quot;msla0572.local&quot; 
+                                                                                             machine 
+                                                                                            &quot;x86_64&quot; 
+                                                                                               login 
+                                                                                              &quot;root&quot; 
+                                                                                                user 
+                                                                                          &quot;kgontjes&quot; 
+                                                                                      effective_user 
+                                                                                          &quot;kgontjes&quot; </code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.5
+Running under: macOS Sequoia 15.6.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -677,7 +677,7 @@ ESCrE genes
 Chromosomal ESCrE genes
 </th>
 <th style="text-align:left;">
-Plasmidic ESCrE genes
+Plasmid-linked ESCrE genes
 </th>
 <th style="text-align:left;">
 ESCrE plasmids
@@ -731,7 +731,6 @@ blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -756,7 +755,6 @@ blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -965,7 +963,6 @@ blaCMY-2, blaEC-8*
 blaCMY-2, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-2
 </td>
 <td style="text-align:left;">
 </td>
@@ -990,7 +987,6 @@ blaCMY-2, blaEC-8*
 blaCMY-2, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-2
 </td>
 <td style="text-align:left;">
 </td>
@@ -1015,7 +1011,6 @@ blaCMY-2, blaEC-8*
 blaCMY-2, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-2
 </td>
 <td style="text-align:left;">
 </td>
@@ -1040,7 +1035,6 @@ blaCMY-2, blaEC-8*
 blaCMY-2, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-2
 </td>
 <td style="text-align:left;">
 </td>
@@ -1091,7 +1085,7 @@ blaCMY-4, blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-4, blaCTX-M-15
+blaCMY-4
 </td>
 <td style="text-align:left;">
 AA282
@@ -1117,7 +1111,7 @@ blaCMY-4, blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-4, blaCTX-M-15
+blaCMY-4
 </td>
 <td style="text-align:left;">
 AA282
@@ -1143,7 +1137,7 @@ blaCMY-4, blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-4, blaCTX-M-15
+blaCMY-4
 </td>
 <td style="text-align:left;">
 AA282
@@ -1198,31 +1192,6 @@ AA452
 </tr>
 <tr>
 <td style="text-align:left;">
-151H
-</td>
-<td style="text-align:right;">
-3
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 29 Cluster 1
-</td>
-<td style="text-align:left;">
-AA452
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-AA452
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
 160H
 </td>
 <td style="text-align:right;">
@@ -1241,7 +1210,7 @@ blaCMY-2, blaCTX-M-15, blaEC-8*
 blaCTX-M-15, blaEC-8*
 </td>
 <td style="text-align:left;">
-blaCMY-2, blaCTX-M-15
+blaCMY-2
 </td>
 <td style="text-align:left;">
 AA474
@@ -1366,7 +1335,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -1391,7 +1359,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -1416,7 +1383,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -1441,7 +1407,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -1492,7 +1457,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -1563,7 +1527,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -1588,7 +1551,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -1613,7 +1575,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -1638,7 +1599,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2123,7 +2083,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2148,7 +2107,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2173,7 +2131,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2198,7 +2155,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2223,7 +2179,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2248,7 +2203,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2273,7 +2227,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2298,7 +2251,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2534,7 +2486,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -2559,7 +2510,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -2584,7 +2534,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -2609,7 +2558,6 @@ blaCTX-M-27, blaEC-5*
 blaCTX-M-27, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-27
 </td>
 <td style="text-align:left;">
 </td>
@@ -2760,7 +2708,6 @@ blaCTX-M-15, blaEC-5*
 blaCTX-M-15, blaEC-5*
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2911,7 +2858,6 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2936,7 +2882,6 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2961,7 +2906,6 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -2986,7 +2930,6 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-blaCTX-M-15
 </td>
 <td style="text-align:left;">
 </td>
@@ -3011,7 +2954,7 @@ blaCTX-M-15, blaCTX-M-27, blaEC-5
 blaCTX-M-15, blaEC-5
 </td>
 <td style="text-align:left;">
-blaCTX-M-15, blaCTX-M-27
+blaCTX-M-27
 </td>
 <td style="text-align:left;">
 AA174
